--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "capstone-app",
+  "name": "serverless-todo-app",
   "version": "1.0.0",
-  "description": "Serverless image app for the Udacity Capstone Project",
+  "description": "Serverless TODO image app",
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/http-errors": "^1.6.1",
     "aws-xray-sdk": "^2.2.0",
-    "axios": "^0.27.2",
+    "axios": "^0.19.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.27.0",
@@ -18,17 +18,17 @@
     "@types/aws-lambda": "^8.10.17",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.14.4",
-    "aws-sdk": "^2.1141.0",
+    "aws-sdk": "^2.433.0",
     "serverless": "^3.18.1",
     "serverless-aws-documentation": "^1.1.0",
-    "serverless-iam-roles-per-function": "^1.0.4",
+    "serverless-iam-roles-per-function": "^3.2.0-e97ab49",
     "serverless-plugin-canary-deployments": "^0.4.7",
-    "serverless-reqvalidator-plugin": "^1.0.3",
+    "serverless-reqvalidator-plugin": "^1.0.4",
     "serverless-webpack": "^5.7.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.4.1",
     "webpack": "^5.72.1"
   },
-  "author": "Rebekka Haley",
-  "license": ""
+  "author": "Ivan Mushketyk",
+  "license": "MIT"
 }
