--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,10 +1,12 @@
-service: capstone-app-Tucpp
+service: serverless-todo-app-1603
 
 plugins:
+  - serverless-webpack
   - serverless-iam-roles-per-function
   - serverless-reqvalidator-plugin
   - serverless-aws-documentation
-  - serverless-webpack
+
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -12,152 +14,182 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'ap-southeast-1'}
 
+  environment:
+    TODOS_TABLE: Todos-${self:provider.stage}
+    TODOS_BY_USER_INDEX: TodosByUserIndex
+    ATTACHMENTS_S3_BUCKET: todos-attachments-1603-${self:provider.stage}
+    SIGNED_URL_EXPIRATION: 300
+    AUTH_0_JWKS_URL: https://dev-r35epbqy.us.auth0.com/.well-known/jwks.json
+
   tracing:
     lambda: true
     apiGateway: true
 
-  environment:
-    MEALS_TABLE: Meals-${self:provider.stage}
-    USER_ID_INDEX: UserIdIndex
-    IMAGES_S3_BUCKET: serverless-meal-images-tucpp-1111-${self:provider.stage}
-    SIGNED_URL_EXPIRATION: 300
-
 custom:
-  serverless-iam-roles-per-function:
-    defaultInherit: true
-
   documentation:
     api:
       info:
         version: v1.0.0
-        title: Serverless Meal Diary Application
-        description: Serverless application for users to manage their MEAL items
+        title: Udagram API
+        description: Serverless application for images sharing
     models:
-      - name: MealCreateRequest
-        contentType: application/json
-        schema: ${file(models/create-meal-request.json)}
-      - name: MealUpdateRequest
-        contentType: application/json
-        schema: ${file(models/update-meal-request.json)}
+      - name: TodoItem
+        contentType: "application/json"
+        schema: 
+          type: object
+          required:
+            - name
+            - dueDate
+          properties:
+            name:
+              minLength: 1
+              type: string
+            dueDate:
+              type: string
+
+      - name: TodoUpdate
+        contentType: "application/json"
+        schema: 
+          type: object
+          required:
+            - name
+            - dueDate
+            - done
+          properties:
+            name:
+              minLength: 1
+              type: string
+            dueDate:
+              type: string
+            done:
+              type: boolean
+
 
 functions:
+
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
-  GetMeals:
-    handler: src/lambda/http/getMeals.handler
+  GetTodos:
+    handler: src/lambda/http/getTodos.handler
     events:
       - http:
           method: get
-          path: meals
+          path: todos
           cors: true
-          authorizer: Auth
+          auth: Auth
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODOS_BY_USER_INDEX}
       - Effect: Allow
         Action:
-          - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
-      - Effect: Allow
-        Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:GetSamplingRules
+          - xray:GetSamplingTargets
+          - xray:GetSamplingStatisticSummaries
+          - xray:BatchGetTraces
+          - xray:GetServiceGraph
+          - xray:GetTraceGraph
+          - xray:GetTraceSummaries
+          - xray:GetGroups
+          - xray:GetGroup
+          - xray:PutTraceSegments
         Resource:
           - "*"
 
-  CreateMeal:
-    handler: src/lambda/http/createMeal.handler
+  CreateTodo:
+    handler: src/lambda/http/createTodo.handler
     events:
       - http:
           method: post
-          path: meals
+          path: todos
           cors: true
-          authorizer: Auth
+          auth: Auth
           reqValidatorName: RequestBodyValidator
           documentation:
-            summary: Create a new MEAL for a current user
-            description: Create a new MEAL for a current user
             requestModels:
-              "application/json": MealCreateRequest
+              "application/json": TodoItem
+
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:PutItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - dynamodb:PutItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
-      - Effect: Allow
-        Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:GetSamplingRules
+          - xray:GetSamplingTargets
+          - xray:GetSamplingStatisticSummaries
+          - xray:BatchGetTraces
+          - xray:GetServiceGraph
+          - xray:GetTraceGraph
+          - xray:GetTraceSummaries
+          - xray:GetGroups
+          - xray:GetGroup
+          - xray:PutTraceSegments
         Resource:
           - "*"
 
-  UpdateMeal:
-    handler: src/lambda/http/updateMeal.handler
+  UpdateTodo:
+    handler: src/lambda/http/updateTodo.handler
     events:
       - http:
           method: patch
-          path: meals/{mealId}
+          path: todos/{todoId}
           cors: true
-          authorizer: Auth
+          auth: Auth
           reqValidatorName: RequestBodyValidator
           documentation:
-            summary: Update a MEAL item created by a current user
-            description: Update a MEAL item created by a current user
             requestModels:
-              "application/json": MealUpdateRequest
+              "application/json": TodoUpdate
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:UpdateItem
           - dynamodb:GetItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - dynamodb:UpdateItem
-          - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
-      - Effect: Allow
-        Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:GetSamplingRules
+          - xray:GetSamplingTargets
+          - xray:GetSamplingStatisticSummaries
+          - xray:BatchGetTraces
+          - xray:GetServiceGraph
+          - xray:GetTraceGraph
+          - xray:GetTraceSummaries
+          - xray:GetGroups
+          - xray:GetGroup
+          - xray:PutTraceSegments
         Resource:
           - "*"
 
-  DeleteMeal:
-    handler: src/lambda/http/deleteMeal.handler
+  DeleteTodo:
+    handler: src/lambda/http/deleteTodo.handler
     events:
       - http:
           method: delete
-          path: meals/{mealId}
+          path: todos/{todoId}
           cors: true
-          authorizer: Auth
+          auth: Auth
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:DeleteItem
           - dynamodb:GetItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - dynamodb:DeleteItem
-          - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
-      - Effect: Allow
-        Action:
-          - s3:GetObject
-          - s3:DeleteObject
-        Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
-      - Effect: Allow
-        Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:GetSamplingRules
+          - xray:GetSamplingTargets
+          - xray:GetSamplingStatisticSummaries
+          - xray:BatchGetTraces
+          - xray:GetServiceGraph
+          - xray:GetTraceGraph
+          - xray:GetTraceSummaries
+          - xray:GetGroups
+          - xray:GetGroup
+          - xray:PutTraceSegments
         Resource:
           - "*"
 
@@ -166,98 +198,87 @@ functions:
     events:
       - http:
           method: post
-          path: meals/{mealId}/attachment
+          path: todos/{todoId}/attachment
           cors: true
-          authorizer: Auth
+          auth: Auth
     iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - s3:PutObject
+        Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENTS_S3_BUCKET}/*
       - Effect: Allow
         Action:
           - dynamodb:UpdateItem
           - dynamodb:GetItem
-          - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEALS_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
-      - Effect: Allow
-        Action:
-          - s3:PutObject
-          - s3:GetObject
-          - s3:DeleteObject
-        Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
-      - Effect: Allow
-        Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:GetSamplingRules
+          - xray:GetSamplingTargets
+          - xray:GetSamplingStatisticSummaries
+          - xray:BatchGetTraces
+          - xray:GetServiceGraph
+          - xray:GetTraceGraph
+          - xray:GetTraceSummaries
+          - xray:GetGroups
+          - xray:GetGroup
+          - xray:PutTraceSegments
         Resource:
           - "*"
 
 resources:
   Resources:
-    # API
-
+    # API Gateway
     GatewayResponseDefault4XX:
       Type: AWS::ApiGateway::GatewayResponse
       Properties:
         ResponseParameters:
           gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
           gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST,DELETE,PATCH'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
         ResponseType: DEFAULT_4XX
         RestApiId:
           Ref: ApiGatewayRestApi
 
-    RequestBodyValidator:
-      Type: AWS::ApiGateway::RequestValidator
-      Properties:
-        Name: "request-body-validator"
-        RestApiId:
-          Ref: ApiGatewayRestApi
-        ValidateRequestBody: true
-        ValidateRequestParameters: false
-
-    # Meals
-
-    MealsTable:
+    # DynamoDB
+    TodosTable:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: mealId
-            AttributeType: S
-          - AttributeName: createdAt
+          - AttributeName: todoId
             AttributeType: S
           - AttributeName: userId
+            AttributeType: S
+          - AttributeName: createdAt
             AttributeType: S
         KeySchema:
           - AttributeName: userId
             KeyType: HASH
-          - AttributeName: mealId
+          - AttributeName: userId
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
-        TableName: ${self:provider.environment.MEALS_TABLE}
-        LocalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.USER_ID_INDEX}
+        TableName: ${self:provider.environment.TODOS_TABLE}
+        GlobalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.TODOS_BY_USER_INDEX}
             KeySchema:
               - AttributeName: userId
                 KeyType: HASH
               - AttributeName: createdAt
                 KeyType: RANGE
             Projection:
-              ProjectionType: ALL # What attributes will be copied to an index
+              ProjectionType: ALL
 
-    # Attachments
-
+    # S3 Bucket
     AttachmentsBucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+        BucketName: ${self:provider.environment.ATTACHMENTS_S3_BUCKET}
         CorsConfiguration:
           CorsRules:
             - AllowedOrigins:
-                - "*"
+                - '*'
               AllowedHeaders:
-                - "*"
+                - '*'
               AllowedMethods:
                 - GET
                 - PUT
@@ -266,7 +287,7 @@ resources:
                 - HEAD
               MaxAge: 3000
 
-    BucketPolicy:
+    AttachmentsBucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
         PolicyDocument:
@@ -275,8 +296,17 @@ resources:
           Statement:
             - Sid: PublicReadForGetBucketObjects
               Effect: Allow
-              Principal: "*"
-              Action:
-                - s3:GetObject
-              Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
+              Principal: '*'
+              Action: 's3:GetObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.ATTACHMENTS_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
+    
+    #Validator
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
